adding timer and disabling buttons

--- a/src/ui/src/index.html
+++ b/src/ui/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>DIP721-Community Coin</title>
+  <title>Cig Dao</title>
   <base href="/">
   <link type="text/css" rel="stylesheet" href="main.css" />
 </head>
