--- a/src/ui/src/index.html
+++ b/src/ui/src/index.html
@@ -5,6 +5,7 @@
   <title>Cig Dao</title>
   <base href="/">
   <link type="text/css" rel="stylesheet" href="main.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div id="root"></div>
