--- a/src/ui/src/index.html
+++ b/src/ui/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <link type="text/css" rel="stylesheet" href="main.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 <body>
 <div id="root"></div>
