--- a/src/ui/src/index.html
+++ b/src/ui/src/index.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@crypto_is_good" />
+  <meta name="twitter:site" content="@cigdao_" />
+  <meta name="twitter:creator" content="@crypto_is_good"/>
   <meta name="twitter:title" content="CigDao" />
   <meta name="twitter:description" content="CigDao is an ICP Token Launcher for the people" />
   <meta name="twitter:image" content="https://cdn.cigdao.org/cryptoisgood.png" />
